l5 swagger generate to update the api docs to display the functionality
